# Deep_Agentic_AI_Tool

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_SEPARATION.md  ARXIV_INTEGRATION_SUMMARY.md  CONFIGURATION.md  DEEP_SEARCH_AGENT_EXAMPLES.md  DEPRECATION_WARNINGS.md  Deep_Agent_Gradio_RAG_localLLM_main.py  EMAIL_PARLANT_TEST_PROMPTS.md  FEATURES.md  GMAIL_API_SETUP.md  GOOGLE_MAPS_INTEGRATION.md  GUARDRAILS.md  MULTI_AGENT_README.md  OLLAMA_SETUP.md  PARLANT_INSTALLATION.md  PARLANT_SDK_INTEGRATION.md  PRIVATE_FILE_RAG_GUIDE.md  README.md  conversation_history.db  main.py  pyproject.toml  requirements.txt  test_guardrails.py  test_parlant_integration.py  test_simple_chatbot.py
.github/workflows/: cd.yml  ci.yml
chroma_db_private/: chroma.sqlite3
deep_agent_rag/: README.md  __init__.py  config.py
deep_agent_rag/agents/: __init__.py  calendar_agent.py  calendar_reflection_agent.py  calendar_validation.py  email_agent.py  email_reflection_agent.py  image_reflection_agent.py  note_taker.py  planner.py  reporter.py  researcher.py  state.py
deep_agent_rag/graph/: __init__.py  agent_graph.py  image_analysis_graph.py
deep_agent_rag/guardrails/: __init__.py  nemo_manager.py
deep_agent_rag/guidelines/: README.md  __init__.py  parlant_manager.py
deep_agent_rag/memory/: __init__.py  chat_memory.py
deep_agent_rag/models/: __init__.py  (+1 more)
scripts/: README_CALENDAR_MCP.md  calendar_mcp_server.py  image_analysis_mcp_server.py  test_calendar_mcp_client.py
src/: hybrid_subquery_hyde_rag.py  hyde_rag.py  rag_utils.py  step_back_rag.py  subquery_rag.py  triple_hybrid_rag.py
(+23 files in other folders)
