[project]
name = "deep-agentic-ai-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.1.3",
    "langchain-google-genai>=4.0.0",
    "python-dotenv>=1.2.1",
    "google-generativeai>=0.3.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "pypdf>=6.4.1",
    "langchain-tavily>=0.2.13",
    "tavily-python>=0.7.14",
    "yfinance>=0.2.66",
    "langgraph>=1.0.4",
    "langchain-groq>=1.1.0",
    "langchain-ollama>=0.1.0",
    "grandalf>=0.8",
    "langserve[all]>=0.3.3",
    "fastapi>=0.124.2",
    "uvicorn>=0.38.0",
    "mcp>=1.24.0",
    "torch>=2.9.1",
    "sentence-transformers>=5.2.0",
    "pillow>=12.0.0",
    "peft>=0.18.0",
    "torchvision>=0.24.1",
    "einops>=0.8.1",
    "gradio>=6.2.0",
    "accelerate>=1.12.0",
    "mlx>=0.30.1",
    "mlx-lm>=0.29.1",
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.3",
    "googlemaps>=4.10.0",
    "parlant @ git+https://github.com/emcie-co/parlant@develop",  # Learn_RAG 項目依賴（用於私有文件 RAG 功能）
    "arxiv>=2.3.1",
    "langchain-text-splitters>=0.0.1",
    "rank-bm25>=0.2.2",
    "chromadb>=0.4.22",
    "docx2txt>=0.8",
    "langchain-experimental>=0.0.50",
    "jieba>=0.42.1",  # 中文分詞工具（用於 Guardrails 內容過濾）
    "pyyaml>=6.0.0",  # YAML 配置文件解析（用於自定義 Guardrails 配置）
]
